Revert Java versions back to 21 in pom.xml files
- Reverted ojp-server/pom.xml Java version from 17 to 21
- Reverted ojp-xa-pool-commons/pom.xml Java version from 17 to 21
- Restored Thread.ofVirtual() usage in CommonsPool2XADataSource
- Restored Java 21 features in test files (try-with-resources for ExecutorService, List.getFirst())

Note: This requires Java 21 to compile

Co-authored-by: rrobetti <7221783+rrobetti@users.noreply.github.com>